# mass-driver

./: .copier-answers.yml  .cruft.json  .dockerignore  .flake8  .gitignore  .markdown-lint.yml  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  COPYING  Dockerfile  Dockerfile.release  Makefile  README.md  ROADMAP.md  commit_PR.toml  counter.toml  demo.org  patch_driver.toml  pyproject.toml  release.Dockerfile  sed_driver.toml
.github/workflows/: ci.yaml  docs.yml
docs/source/: activity.uml  architecture.md  changelog.md  conf.py  development.md  docstring_parser.py  drivers.md  index.md  index.rst  manpage.md  objectives.md  plugins.md  roadmap.md  scanning.md  sources.md  usage.md
docs/source/_static/: .keep
docs/source/templates/: drivers.md.jinja2  plugins.md.jinja2
features/: create_patch.feature  migration_lifecycle.feature  repo_discovery.feature
src/mass_driver/: __init__.py  activity_run.py  cli.py  commands.py  discovery.py  errors.py  forge.py  forge_run.py  git.py  main.py  migration.py  migration_run.py  model.py  patch_driver.py  patchdriver.py  process_repo.py  repo.py  review_run.py  scan_run.py  summarize.py
src/mass_driver/drivers/: __init__.py  bricks.py  counter.py  deleter.py  jsonpatch.py  poetry.py  precommit.py  shell.py  stamper.py
src/mass_driver/forges/: __init__.py  dummy.py  github.py
src/mass_driver/models/: activity.py  forge.py  migration.py  outcome.py  patchdriver.py  repository.py  scan.py  source.py  status.py
src/mass_driver/scanners/: __init__.py  basic_scanners.py
src/mass_driver/sources/: __init__.py  dummy.py  github_source.py  simple.py
src/mass_driver/tests/: fixtures.py  sample_result.py  test_activity.py  test_counterdriver.py  test_driver_listing.py  test_followup.py  test_plugins_listing.py  test_source.py  test_viewpr.py
src/mass_driver/tests/data/: 2mig_1forge.toml  activity.toml  forge_only.toml  mig_only.toml
src/mass_driver/tests/test_counterdriver/: activity.toml  config_count1.toml  config_count2.toml  counter_config1.toml  counter_config2.toml  forge_config.toml
src/mass_driver/tests/test_counterdriver/count_to_1/: migration.toml
src/mass_driver/tests/test_counterdriver/count_to_2/: migration.toml
src/mass_driver/tests/test_counterdriver/sample_repo/: README.md
src/mass_driver/tests/test_scanner/dockerfile/: Dockerfile
src/mass_driver/tests/test_scanner/multiple-dockerfiles/: Dockerfile
src/mass_driver/tests/test_source/: csv_source.toml  template_source.toml
tests/: README.md  __init__.py  test_mass_driver.py  test_process_outcome.py
